# events-chatbot

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  resume_17_05.md
docs/: AGENTS.md  ai_usage.md  architecture.md  implementation_plan.md  technical_plan.md
docs/logs/: sprint_00.md  sprint_01.md  sprint_02.md  sprint_03.md  sprint_04.md  sprint_05.md  sprint_06.md  sprint_07.md  sprint_08.md  sprint_09.md
src/event_chatbot/: AGENTS.md  __init__.py  main.py
src/event_chatbot/api/: AGENTS.md  dependencies.py  guards.py
src/event_chatbot/core/: config.py  logging.py  time.py
src/event_chatbot/db/: AGENTS.md  connection.py  migrations.py  schema.sql
src/event_chatbot/providers/: AGENTS.md  agendalx.py  agno_llm.py  embeddings.py  event_source.py  llm.py  template_response.py  ticketmaster.py
src/event_chatbot/repositories/: AGENTS.md  chat_sessions.py  event_embeddings.py  events.py  raw_events.py
src/event_chatbot/retrieval/: AGENTS.md  __init__.py  context.py  embedding_text.py  (+7 more)
tests/: AGENTS.md
tests/integration/: test_admin_guards.py  test_chat_api.py  test_db_schema.py  test_ingestion_flow.py  test_repositories.py  test_retrieval_flow.py  test_semantic_retrieval.py
tests/unit/: test_agendalx_provider.py  test_config.py  test_connection.py  test_context.py  test_embedding_text.py  test_fts.py  test_health.py  test_llm_protocols.py  test_normalization.py  test_query_builder.py  test_ranking.py  test_semantic.py  test_template_response.py  test_ticketmaster_normalization.py
(+21 files in other folders)
