[project]
name = "event-chatbot"
version = "0.1.0"
description = "Grounded local events chatbot API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "fastapi",
    "httpx",
    "openai",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.package-data]
event_chatbot = ["db/schema.sql", "web/*.html", "web/*.css", "web/*.js"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
